Dark mode text fixed for new screen

--- a/asset/style.css
+++ b/asset/style.css
@@ -270,10 +270,10 @@ body{
    font-weight: 400;
 }
 .countryborder{
-    border-radius: 5px;
+    border-radius: 3px;
     box-shadow: 0px 1px 1px hsl(0, 0%, 52%);
     font-weight: 300;
-    padding: 3px 20px;
+    padding: 5px 15px;
 
 }
 
@@ -286,6 +286,9 @@ body{
     .container{
         margin: 0 auto;
         width: 100%;
+    }
+    .mainExtra{
+       padding: 30px; 
     }
     #countries{
         display: grid;
@@ -309,7 +312,27 @@ body{
         /* cursor: pointer; */
        
     }
-    
+    .hero-img{
+        width:100%;
+        height: 100%;
+        /* background-color: yellow; */
+    }
+    .more-info{
+        display: block;
+      
+    }
+    .col2{
+        margin-top: 30px;
+    }
+  #cflag{
+        width: 100%;
+        /* height: 100%; */
+    }
+    .country-info-Container{
+        display: block;
+       
+        width: 100%;
+    }
     .subhead{
         display: block;
         
@@ -333,7 +356,27 @@ body{
         border-radius: 3px;
       
     }
+    .borderWrap{
+        display: block;
+        width: 100%;
+        text-align: left;
+        margin-top: 30px;
+        word-wrap: break-word;
+
+        
+    }
+    .btnbk{
+        
+        width: 35%;
+        border-radius: 5px;
+     
+    }
+   .borderCont{
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 15px; 
+    text-align: center;
    
-   
-   
+   }
 }
